--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,8 @@ on:
     paths-ignore:
       - "README.md"
 permissions:
-  contents: read
+  contents: write
+
 jobs:
   release:
     name: Release
